# kingchess_c

./: .sconsign.dblite  BUILD  CMakeLists.txt  augment_data_test.cpp  collect.cpp  collect.h  collect_45.cpp  collect_45.h  collect_main.cpp  collect_main_45.cpp  collect_main_muc.cpp  collect_main_test.cpp  deep_model_original.h  mcts.cpp  mcts.h  model_vs_alpha.cpp  pit.py  policy_value_net_pytorch.py  pure_mcts.cpp  resnet_vs_pit.cpp  resnet_vs_vit.cpp  transfer_trt.py  transfer_trt_pit.py  transfer_trt_resnet.py  transfer_trt_vit.py
deep_learning/: BUILD  deep_model.cpp  deep_model.h  readme.txt
eveluate/: BUILD  client.cpp  server_new.cpp
fundamental/: BUILD  agent.cpp  agent.h  alpha_beta.cpp  alpha_beta.h  board.cpp  board.h  bot_vs_bot_alpha.cpp  bot_vs_bot_mcts.cpp  bot_vs_bot_mcts_pure.cpp  bot_vs_bot_mcts_pure_add_expert.cpp  bot_vs_bot_random.cpp  bot_vs_human.cpp  collect_alpha_beta.cpp  coordinate.cpp  coordinate.h  demo_mcts_thread.cpp  encoder_test.cpp  expert.cpp  expert.h  expert_test.cpp  file_2024-04-14_23_58_09.game  function.cpp  function.h  gamestate.cpp  gamestate.h  hello.cpp  legal_moves_test.cpp  mcts_pure_test.cpp  move.cpp  move.h  neighbor.cpp  neighbor.h  proto_test.cpp  symmetry_test.cpp  test.cpp  test.proto  test1.cpp  test1.h  test_board.cpp  (+4 more)
mcts/: engine_param.h  mcts.cpp  mcts.h  mcts_thread.cpp  mcts_thread.h  mcts_without_stage3_thread.cpp  mcts_without_stage3_thread.h  mcts_without_stage3_thread_new.cpp  mcts_without_stage3_thread_new.h  node.cpp  node.h  node_thread.cpp  node_thread.h  rw_lock.h  theradpool_test.cpp  threadpool.cpp  threadpool.h
mcts_8_13/: mcts.cpp  mcts.h
model/: 34000.engine  34000_vit.pth  70000.engine  70000_vit.pth  current.onnx
net/: BUILD  TensorRTBuffer.h  TreeNode.cpp  TreeNode.h  common.h  deep_model.cpp  deep_model.h  deep_model_45.h  deep_model_dev.cpp  deep_model_dev.h  deep_model_test.cpp  deep_model_test_45.cpp  mcts.cpp  mcts.h  mcts_45.cpp  mcts_45.h  mcts_45_alpha.cpp  mcts_45_alpha.h  mcts_45_expert.cpp  mcts_81_expert.cpp  mcts_81_expert.h  mcts_add_expert.cpp  mcts_add_expert.h  mcts_alphazero.cpp  mcts_alphazero.h  mcts_player.cpp  mcts_player.h  mcts_pure.cpp  mcts_pure.h  mcts_test.cpp  net.py  thread_pool.h
